# CSE412-Class-Project

./: .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  config.json  dbconnection.py  docker-compose.yml  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
cogs/: general.py
database/: Answers.csv  Questions.csv  __init__.py  answers.sql  asked.sql  database_dump.sql  init_database.sql  plays.sql  questions.sql  schema.sql  triviasession.sql  users.sql
