[tool.poetry]
name = "cse412-class-project"
version = "0.1.0"
description = "CSE412 Class Project Discord Trivia Bot"
authors = ["Divanshu Chauhan <divkix@divkix.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.10"
aiosqlite = "^0.20.0"
"discord.py" = "^2.4.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pyclean = "^3.0.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
